--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
+<style>
+body {
+  font-family: serif;
+}
+h2 {
+  font-family: sans-serif;
+}
+</style>
+
 <h2>Wellcome to my website</h2>
 <p>My name is Ada, and this is my website</p>
