--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ h2 {
 }
 </style>
 
-<h2>Wellcome to my website</h2>
+<h2>Welcome to my website</h2>
 <p>My name is Ada, and this is my website</p>
 
 <img src="le_matin.png" />
